# mcp-finance

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT_REPORT.md  LICENSE  README.en.md  README.md  package-lock.json  pyproject.toml  release.ps1  run_monitor.py  start_dashboard.bat  start_dashboard.ps1
.github/workflows/: ci.yml
cn_stock/: __init__.py  akshare_data.py  backtest.py  chart.py  screener.py  server.py
mcp_finance/: __init__.py  akshare_data.py  analysis.py  api.py  api_extended.py  backtest.py  cache.py  chart.py  data.py  errors.py  financials.py  indicators.py  logging_config.py  monitor.py  portfolio.py  pybroker_strategy.py  screener.py  server.py  tushare_source.py  validators.py
mcp_finance/dashboard/: __init__.py  app.py  fastapi_server.py  server.py
mcp_finance/dashboard/static/: common.css
mcp_finance/dashboard/static/js/: shared.js
mcp_finance/dashboard/templates/: backtest.html  index.html  screener.html
tests/: test_backtest.py  test_cache.py  test_indicators.py  test_portfolio.py  test_screener.py  test_validators.py
