[project]
name = "mcp-markets"
version = "0.12.1"
description = "全市场金融数据 MCP Server — A股/港股/美股/期货 行情/K线/技术指标/选股/回测 基于 easy-tdx + AKShare + yfinance 三数据源"
authors = [{name = "mcp-markets", email = "mcp-finance@github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment"
]
keywords = ["mcp", "stock", "finance", "a-share", "hk-stock", "us-stock", "futures", "backtest", "technical-analysis", "tushare", "akshare", "easy-tdx", "yfinance", "backtrader"]

dependencies = [
    "mcp>=1.4.1",
    "pydantic>=2.0",
    "plotly>=5.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "easy-tdx>=1.14",
    "akshare>=1.18",
    "yfinance>=0.2.0",
    "backtrader>=1.9",
    "flask>=3.0",
    "tushare>=1.4",
    "python-dotenv>=1.0",
    "optuna>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]
all = [
    "mcp-markets[dev]",
]

[project.urls]
homepage = "https://github.com/ojkkk/mcp-finance"
repository = "https://github.com/ojkkk/mcp-finance"
issues = "https://github.com/ojkkk/mcp-finance/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["mcp_finance"]
exclude = [
    "mcp_finance/.financial_cache/**",
    "mcp_finance/.kline_cache/**",
    "mcp_finance/.codegraph/**",
    "mcp_finance/.reasonix/**",
    "mcp_finance/__pycache__/**",
]

[project.scripts]
mcp-markets = "mcp_finance.server:cli"
mcp-dashboard = "mcp_finance.dashboard.fastapi_server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"


